# 2d-rts-engine

./: .gitignore  CMakeLists.txt  README.md
include/: camera.h  camera2d.h  texture.h
include/engine/: camera2d.h  debug_draw.h  engine.h  game_object.h  input_state.h  resources_manager.h  scene.h  shader.h  sprite.h  sprite_renderer.h  texture.h  transform.h  transform2d.h  window.h
include/engine/components/: camera.h  input.h  physics_body.h  sprite.h  transform.h
include/engine/systems/: camera_system.h  debug_system.h  physics_system.h  render_system.h
include/game/: steering.h
include/game/steerings/: behaviour.h
include/renderer/: shader.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
resources/shaders/: default.fs
resources/shaders/fragment/: default.glsl  line.glsl  point.glsl  sprite.glsl
resources/shaders/vertex/: default.glsl  point.glsl  sprite.glsl
resources/shaders/vertex/debug/: line.glsl
shaders/: default.fs  default.vs
src/: camera.cpp  camera.h  camera2d.cpp  main.cpp  shader.cpp  shader.h  texture.cpp  window.cpp  window.h
src/engine/: camera.cpp  camera2d.cpp  debug_draw.cpp  engine.cpp  game_object.cpp  input_state.cpp  resources_manager.cpp  scene.cpp  shader.cpp  sprite_renderer.cpp  texture.cpp  window.cpp
src/engine/systems/: camera_system.cpp  debug_system.cpp  physics_system.cpp  render_system.cpp
src/imgui/: imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/renderer/: shader.cpp
